--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.18.2",
+    "axios": "^0.24.0",
     "craco-less": "^2.0.0",
     "events": "^3.3.0",
     "react": "^17.0.2",
