--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.43.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.19"
   }
 }
