--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
     "sass": "^1.43.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
@@ -29,7 +30,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "redux": "node public/redux.js"
   },
   "eslintConfig": {
     "extends": [
