--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "events": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.43.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
